2007-10-24  Oyvind Harboe <oyvind.harboe@zylin.com>
2007-10-24  Jonathan Larmour  <jifl@eCosCentric.com>

	* src/malloc.cxx: Init priority for pool initialization is now
	CYG_INIT_MEMALLOC instead of before CYG_INIT_LIBC

	* src/heapgen.tcl: Ditto.

2006-05-17  Andrew Lunn  <andrew.lunn@ascom.ch>

	* doc/memalloc.sgml: Fix parameters for calloc. Reported by
	Andy Jackson.

2005-09-30  Alexander Neundorf <neundorf@kde.org>

        * doc/memalloc.sgml: two minor fixes

2005-07-30  Andrew Lunn  <andrew.lunn@ascom.ch>

	* tests/heaptest.c (test_pat): Casts to prevent compiler warnings.
	* tests/testaux.hxx: new cannot be both global and static.

2005-07-22  Andrew Lunn  <andrew.lunn@ascom.ch>

	* cdl/memalloc.cdl: Use the CXXFLAGS for the native compiler to
	avoid passing it flags only valid for C.

2005-03-27  Andrew Lunn  <andrew.lunn@ascom.ch>

	* cdl/memalloc.cdl: Added reference to documentation
	* doc/memalloc.sgml: Basic user documentation.
	* tests/heaptest.c (test_pat): Fix compiler error with 
	  diag_printf.

2004-10-04  Oyvind Harboe  <oyvind.harboe@zylin.com>

	* src/dlmalloc.cxx (resize_alloc): No longer invoke
	 cyg_memalloc_alloc_fail() on failure to resize. It is not an out
	 of memory condition, it just means the current memory allocation
	 could not be expanded. realloc() will try allocating a completely
	 new block of memory and only if that fails do we have an out of
	 memory condition.

2004-10-01  Oyvind Harboe  <oyvind.harboe@zylin.com>

	* heapgen.tcl: place the CYGBLD_ATTRIB_INIT_PRI such that it
	compiles for gcc 3.4.2 which is more picky about its placement.

2004-06-24  Oyvind Harboe  <oyvind.harboe@zylin.com>

	* Added cyg_memalloc_alloc_fail() fn which is invoked before 
	return NULL from failed allocations. Useful breakpoint site.
	Andrew Lunn wrote some of the code and pointed out various
	wrinkles to be ironed out.

2004-02-15  Jonathan Larmour  <jifl@eCosCentric.com>

	* include/kapi.h: Add throw specifications throughout.